Modify models to new architecture. Add buckets.
