# src/api/controllers/form.controller.ts
@@ -4,7 +4,7 @@ import {FormControllerService} from "../services/form.controller.service";
 export async function createForm(req, res) {
     const service = new FormControllerService();
     const form = req.body;
-    const addedForm = await service.addForm(form.name, form.link, form.tags);
+    const addedForm = await service.addForm(form.name, form.link, form.bucketIds);
     await res.status(statusCodes.CREATED).json(addedForm);
 }
 
@@ -12,7 +12,7 @@ export async function modifyForm(req, res) {
     const service = new FormControllerService();
     const form = req.body;
     const modifiedForm = (await service.updateMany([form]))[0].toObject();
-    const extendedForm = await service.getFormWithTags(modifiedForm._id.toString());
+    const extendedForm = await service.getFormWithBuckets(modifiedForm._id.toString());
     await res.status(statusCodes.OK).json(extendedForm);
 }
 
@@ -20,7 +20,7 @@ export async function getAllForms(req, res) {
     const service = new FormControllerService();
     const expand: boolean = req.swagger.params.expand.value;
     if (expand) {
-        const forms = await service.getFormsWithTheirTags();
+        const forms = await service.getFormsWithTheirBuckets();
         await res.status(statusCodes.OK).json(forms);
     } else {
         const forms = await service.findAll();
@@ -38,7 +38,7 @@ export async function duplicateForm(req, res) {
 export async function getForm(req, res) {
     const service = new FormControllerService();
     const formId: string = req.swagger.params.formId.value;
-    const form = await service.getFormWithTags(formId);
+    const form = await service.getFormWithBuckets(formId);
     await res.status(statusCodes.OK).json(form);
 }
 
