# src/api/controllers/question.controller.ts
@@ -1,18 +1,11 @@
 import statusCodes from 'http-status-codes'
 import {QuestionControllerService} from "../services/question.controller.service";
 
-export async function getQuestionsForForm(req, res) {
-    const service = new QuestionControllerService();
-    const formId = req.swagger.params.formId.value;
-    const questions = await service.getQuestionsForForm(formId);
-    await res.status(statusCodes.OK).json(questions);
-}
-
 export async function createQuestion(req, res) {
     const service = new QuestionControllerService();
-    const formId = req.swagger.params.formId.value;
+    const bucketId = req.swagger.params.bucketId.value;
     const question = req.body;
-    const createdQuestion = await service.addQuestionToForm(question.text, formId);
+    const createdQuestion = await service.addQuestionToBucket(question.text, bucketId);
     await res.status(statusCodes.CREATED).json(createdQuestion)
 }
 
@@ -28,4 +21,18 @@ export async function deleteQuestion(req, res) {
     const questionId = req.swagger.params.questionId.value;
     await service.deleteQuestion(questionId);
     await res.status(statusCodes.OK).json({_id: questionId})
+}
+
+export async function getQuestionsForForm(req, res) {
+    const service = new QuestionControllerService();
+    const formId = req.swagger.params.formId.value;
+    const questions = await service.getQuestionsForForm(formId);
+    await res.status(statusCodes.OK).json(questions);
+}
+
+export async function getQuestionsForBucket(req, res) {
+    const service = new QuestionControllerService();
+    const bucketId = req.swagger.params.bucketId.value;
+    const questions = await service.getQuestionsForBucket(bucketId);
+    await res.status(statusCodes.OK).json(questions);
 }
