# src/api/models/question.ts
@@ -1,14 +1,14 @@
 import mongoose, { Schema, Document } from 'mongoose';
-import {IForm} from "./form";
+import {IBucket} from "./bucket";
 
 export interface IQuestion extends Document {
-    form: IForm["_id"],
+    bucketId: IBucket["_id"],
     text: string,
     priority: number
 }
 
 const questionSchema: Schema = new Schema({
-    form: { type: Schema.Types.ObjectId, required: true },
+    bucketId: { type: Schema.Types.ObjectId, required: true },
     text: { type: String, required: true },
     priority: { type: Number, required: true }
 });
