# src/api/services/form.controller.service.ts
@@ -4,7 +4,7 @@ import {flatMap as _flatMap, uniq as _uniq, groupBy as _groupBy, filter as _filt
 import model from '../models/form';
 import {IForm} from "../models/form";
 import {BaseControllerService} from "./base.controller.service";
-import {TagControllerService} from "./tag.controller.service";
+import {BucketControllerService} from "./bucket.controller.service";
 import {QuestionControllerService} from "./question.controller.service";
 import {IQuestion} from "../models/question";
 
@@ -12,44 +12,34 @@ export class FormControllerService extends BaseControllerService<IForm> {
 
     model: Model<IForm> = model;
 
-    async addForm(name: string, link?: string, tags?: string[]): Promise<IForm> {
+    async addForm(name: string, link?: string, bucketIds?: string[]): Promise<IForm> {
         const nameAfterDuplicateCheck = await this.generateDuplicateFormName(name);
-        return await this.save({ name: nameAfterDuplicateCheck, link, tags, creationTime: Date.now() } as IForm)
+        return await this.save({ name: nameAfterDuplicateCheck, link, bucketIds, creationTime: Date.now() } as IForm)
     }
 
-    async getFormWithTags(formId: string) {
-        const allForms = await this.getFormsWithTheirTags();
+    async getFormWithBuckets(formId: string) {
+        const allForms = await this.getFormsWithTheirBuckets();
         return allForms.find(form => form._id.toString() === formId);
     }
 
-    async getFormsWithTheirTags() {
-        const tagService = new TagControllerService();
+    async getFormsWithTheirBuckets() {
+        const bucketService = new BucketControllerService();
         const forms: IForm[] = await this.findAll();
-        const uniqTagIds = _uniq(_flatMap(forms, form => form.tags));
-        const foundTags = _groupBy(await tagService.model.find({ _id: { $in: uniqTagIds } }), '_id');
-        return forms.map(form => ({...form.toObject(), tags: _flatMap(form.tags, tagId => foundTags[tagId])}))
+        const uniqBucketIds = _uniq(_flatMap(forms, form => form.bucketIds));
+        const foundBuckets = _groupBy(await bucketService.model.find({ _id: { $in: uniqBucketIds } }), '_id');
+        return forms.map(form => ({...form.toObject(), bucketIds: _flatMap(form.bucketIds, bucketId => foundBuckets[bucketId])} as IForm))
     }
 
-    async deleteTagFromForms(tagId: string) {
-        const formsContainingTagId: IForm[] = await this.model.find({tags: tagId});
-        const formsWithoutTagId = formsContainingTagId.map(form => ({...form.toObject(), tags: _filter(form.tags, tag => tag !== tagId)} as IForm));
-        await this.updateMany(formsWithoutTagId);
+    async deleteBucketIdFromForms(bucketId: string) {
+        const formsContainingBucketId: IForm[] = await this.model.find({bucketIds: bucketId});
+        const formsWithoutBucketId = formsContainingBucketId.map(form => ({...form.toObject(), bucketIds: _filter(form.bucketIds, bucket => bucket !== bucketId)} as IForm));
+        await this.updateMany(formsWithoutBucketId);
     }
 
     async duplicateForm(formId: string): Promise<IForm> {
-        const questionService = new QuestionControllerService();
-        const questions: IQuestion[] = await questionService.getQuestionsForForm(formId);
-
         const currentForm = await this.model.findById(formId);
         const newFormName = await this.generateDuplicateFormName(currentForm.name);
-        const newForm: IForm = await this.save({..._omit(currentForm.toObject(), ['_id', 'link']), name: newFormName, creationTime: Date.now()} as IForm);
-
-        questions.map(async (question) => {
-            const newQuestion = {..._omit(question.toObject(), '_id'), form: newForm._id};
-            await questionService.save(newQuestion)
-        })
-
-        return newForm;
+        return await this.save({..._omit(currentForm.toObject(), ['_id', 'link']), name: newFormName, creationTime: Date.now()} as IForm);
     }
 
     async generateDuplicateFormName(designatedName: string) {
